--- a/index.html
+++ b/index.html
@@ -6,22 +6,48 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ToDoList</title>
+    <link rel="icon" href="images/toDoList.svg">
+    <meta property="og:image" content="images/share.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,700;1,400;1,700&family=Mulish:ital,wght@0,400;0,700;1,400;1,700&display=swap"
         rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="css/section.css" />
+    <link rel="stylesheet" href="css/form.css" />
+    <link rel="stylesheet" href="css/list.css" />
+    <link rel="stylesheet" href="css/footer.css" />
     <script src="js/script.js" defer></script>
 </head>
 
 <body class="body">
-    <form class="js-form">
-        <input class="js-newTask">
-        <button>Add task</button>
-    </form>
+    <main class="main">
+        <header>
+            <h1>To Do List</h1>
+        </header>
+        <section class="section">
+            <h2 class="section__header">Add new task</h2>
+            <div class="section__container">
+                <form class="form js-form">
+                    <input class="form__input js-newTask" placeholder="New task">
+                    <button class="form__button js-form__button">Add task</button>
+                </form>
+            </div>
+        </section>
 
-    <ul class="js-tasks"></ul>
+        <section class="section">
+            <h2 class="section__header">To Do List</h2>
+            <div class="section__contaianer">
+                <ul class="list js-tasks"></ul>
+            </div>
+        </section>
+    </main>
 </body>
+<footer class="footer">
+    Icon by <a class="footer__link" href="https://freeicons.io/profile/3">icon king1</a> on <a class="footer__link"
+        href="https://freeicons.io">freeicons.io</a>
+</footer>
 
 </html>
