--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <section class="section">
             <h2 class="section__header">Add new task</h2>
             <form class="form js-form">
-                <input class="form__input js-newTask" placeholder="New task">
+                <input class="form__input js-newTask" autofocus name="task" placeholder="New task">
                 <button class="form__button js-form__button">Add task</button>
             </form>
         </section>
