--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" />
     <title>ToDoList</title>
     <link rel="icon" href="images/toDoList.svg">
     <meta property="og:image" content="images/share.png">
@@ -29,15 +30,19 @@
         </header>
         <section class="section">
             <h2 class="section__header">Add new task</h2>
-            <form class="form js-form">
-                <input class="form__input js-newTask" autofocus name="task" placeholder="New task">
-                <button class="form__button js-form__button">Add task</button>
-            </form>
+            <div class="section__body">
+                <form class="form js-form">
+                    <input class="form__input js-newTask" autofocus name="task" placeholder="New task">
+                    <button class="form__button js-form__button">Add task</button>
+                </form>
+            </div>
         </section>
 
         <section class="section">
             <h2 class="section__header">To Do List</h2>
-            <ul class="list js-tasks"></ul>
+            <div class="section__body">
+                <ul class="list js-tasks"></ul>
+            </div>
         </section>
     </main>
 </body>
