--- a/index.html
+++ b/index.html
@@ -39,7 +39,11 @@
         </section>
 
         <section class="section">
-            <h2 class="section__header">To Do List</h2>
+            <div class="section__headerWithButtons">
+                <h2 class="section__header">To Do List</h2>
+                <div class="section__buttons js-buttons">
+                </div>
+            </div>
             <div class="section__body">
                 <ul class="list js-tasks"></ul>
             </div>
