Grid in the headerSection modified

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </section>
 
         <section class="section">
-            <div class="section__headerWithButtons">
+            <div class="section__headerSection">
                 <h2 class="section__header">To Do List</h2>
                 <div class="section__buttons js-buttons">
                 </div>
